# docs/openapi.json
@@ -88,6 +88,44 @@
         }
       }
     },
+    "/Assignments/batch-statuses": {
+      "get": {
+        "tags": [
+          "Assignments"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ProviderAssignmentBatchStatusDto"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ProviderAssignmentBatchStatusDto"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ProviderAssignmentBatchStatusDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/Auth/oauth/providers": {
       "get": {
         "tags": [
@@ -3490,6 +3528,23 @@
           }
         },
         "additionalProperties": {}
+      },
+      "ProviderAssignmentBatchStatusDto": {
+        "required": [
+          "name",
+          "value"
+        ],
+        "type": "object",
+        "properties": {
+          "value": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
       },
       "ProviderType": {
         "enum": [
