# src/Consilient.ProviderAssignments.Contracts/ProviderAssignmentBatchStatusDto.cs
@@ -1,0 +1,9 @@
+namespace Consilient.ProviderAssignments.Contracts
+{
+    /// <summary>
+    /// DTO representing a provider assignment batch status.
+    /// </summary>
+    public record ProviderAssignmentBatchStatusDto(
+        int Value,
+        string Name);
+}
